--- a/index.html
+++ b/index.html
@@ -60,6 +60,34 @@
         </div>
     </main>
 
+<head>
+  <style>
+    .download-button {
+      display: inline-block;
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 16px;
+      border-radius: 4px;
+      border: none;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
+    }
+
+    .download-button:hover {
+      background-color: #45a049;
+    }
+  </style>
+</head>
+<body>
+  <a href="path_to_your_file" download>
+    <button class="download-button">Download File</button>
+  </a>
+</body>
+    
+
     <footer>
         <p>&copy; 2023 SYARIF MUDRIK - Foto Folio. All rights reserved.</p>
     </footer>
