--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-  <a href="path_to_your_file" download>
+  <a href="arp_scaner.py" download>
     <button class="download-button">Download File</button>
   </a>
 </body>
