--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 <body>
   <a href="path_to_your_file" download>
-    <button class="download-button">Download File</button>
+    <button class="download-button"><a href="https://drive.google.com/drive/u/1/my-drive">Download File</button></a>
   </a>
 </body>
     
