--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
         <div class="gallery">
             <img src="gambar1.png" alt="Foto 1">
-            <img src="gambar2.jpg" alt="Foto 2">
+            <video src="Finalis DKBCI Bekasi - Syarifah Azkia Naura Firrizqiah.mp4" width="370" height="478" controls></video>
             <img src="gambar3.png" alt="Foto 3">
             <!-- Tambahkan gambar-gambar lainnya di sini -->
         </div>
