--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SYARIF MUDRIK - Foto Folio</title>
+    <title>KELUARGA ANWAR - Foto Folio</title>
     <style>
         /* Gaya CSS */
         body {
