--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <h1>SYARIF MUDRIK</h1>
+        <h1>KELUARGA ANWAR</h1>
         <p>Foto Folio</p>
     </header>
 
