--- a/index.html
+++ b/index.html
@@ -208,16 +208,15 @@
         <div class="gallery-item video">
             <img src="thumbnail-video.jpg" alt="Thumbnail Video">
             <video src="Finalis DKBCI Bekasi - Syarifah Azkia Naura Firrizqiah.mp4" width="300" height="400" controls></video>
+            <div class="back-link">
+                <a href="https://youtube.com/shorts/8xNDJ3YEaio?feature=share3">MY YOUTUBE CHANNEL</a>
+            </div>
         </div>
         <div class="gallery-item">
             <img src="gambar3.png" alt="Foto 3">
         </div>
         <!-- Tambahkan gambar-gambar lainnya di sini -->
     </main>
-
-    <div class="back-link">
-        <a href="https://www.youtube.com/shorts/8xNDJ3YEaio">Back to Page</a>
-    </div>
 
     <footer>
         <p>&copy; 2023 SYARIF MUDRIK - Foto Folio. All rights reserved.</p>
