--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         }
 
         .back-link a {
-            color: #fff;
+            color: #ffff;
             text-decoration: none;
         }
 
