--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         footer {
             background-color: #333;
-            color: #fff;
+            color: #ffffff;
             padding: 20px;
             text-align: center;
         }
@@ -156,7 +156,7 @@
         }
 
         .back-link a {
-            color: #ffff;
+            color: #ffffff;
             text-decoration: none;
         }
 
