--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         }
 
         .back-link a {
-            color: #ffffff;
+            color: #f;
             text-decoration: none;
         }
 
