--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         }
 
         .login-form input[type="submit"] {
-            background-color: #4CAF80;
+            background-color: #4CAF100;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -121,7 +121,7 @@
         .login-form input[type="text"]:focus,
         .login-form input[type="password"]:focus {
             outline: none;
-            box-shadow: 0 0 5px #4CAF50;
+            box-shadow: 0 0 5px #4CAF90;
         }
 
         footer {
