--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         }
 
         .login-form input[type="submit"] {
-            background-color: #4CAF100;
+            background-color: #4CAF30;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -126,7 +126,7 @@
 
         footer {
             background-color: #333;
-            color: #ffffff;
+            color: #ff;
             padding: 20px;
             text-align: center;
         }
