--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
             <img src="thumbnail-video.jpg" alt="Thumbnail Video">
             <video src="Finalis DKBCI Bekasi - Syarifah Azkia Naura Firrizqiah.mp4" width="300" height="400" controls></video>
             <div class="back-link">
-                <a href="https://youtube.com/shorts/8xNDJ3YEaio?feature=share3">MY YOUTUBE CHANNEL</a>       
+                <li><a href="https://youtube.com/shorts/8xNDJ3YEaio?feature=share3" href="#">MY YOUTUBE CHANNEL</a></li>      
             </div>
-                                                                            <a>---------------------</a> 
+                                                                            <a>------------------------------------------------------------</a> 
         </div>
         <div class="gallery-item">
             <img src="gambar3.png" alt="Foto 3">
