--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                 <li><a href="https://youtube.com/shorts/8xNDJ3YEaio?feature=share3" href="#">MY YOUTUBE CHANNEL</a></li>      
             </div>
                                                                             <a>------------------------------------------------------------</a> 
+    <a>TEMAN TEMAN DUKUNG AKU YA ,DI KONTES DUTA (DKBCI BERAKSI) TONTON VIDEO KU SEBANYAK BANYAK NYA BANTU LIKE COMAN JUGA YAA TEMAN TEMAN TRIMAKASIH</a>
         </div>
         <div class="gallery-item">
             <img src="gambar3.png" alt="Foto 3">
